gen/ru/promakh/intellij_cjsx/parser/CjsxParser.java
// This is a generated file. Not intended for manual editing.
package ru.promakh.intellij_cjsx.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static ru.promakh.intellij_cjsx.psi.CjsxTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class CjsxParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    if (t == ACCESSOR) {
      r = Accessor(b, 0);
    }
    else if (t == ALPHA_NUMERIC) {
      r = AlphaNumeric(b, 0);
    }
    else if (t == ARG) {
      r = Arg(b, 0);
    }
    else if (t == ARG_LIST) {
      r = ArgList(b, 0);
    }
    else if (t == ARGUMENTS) {
      r = Arguments(b, 0);
    }
    else if (t == ARRAY) {
      r = Array(b, 0);
    }
    else if (t == ASSIGN) {
      r = Assign(b, 0);
    }
    else if (t == ASSIGN_LIST) {
      r = AssignList(b, 0);
    }
    else if (t == ASSIGN_OBJ) {
      r = AssignObj(b, 0);
    }
    else if (t == ASSIGNABLE) {
      r = Assignable(b, 0);
    }
    else if (t == BLOCK) {
      r = Block(b, 0);
    }
    else if (t == BODY) {
      r = Body(b, 0);
    }
    else if (t == CATCH) {
      r = Catch(b, 0);
    }
    else if (t == CLASS_DECLARATION) {
      r = ClassDeclaration(b, 0);
    }
    else if (t == CODE) {
      r = Code(b, 0);
    }
    else if (t == COMMENT) {
      r = Comment(b, 0);
    }
    else if (t == EXPRESSION) {
      r = Expression(b, 0);
    }
    else if (t == FOR) {
      r = For(b, 0);
    }
    else if (t == FOR_BODY) {
      r = ForBody(b, 0);
    }
    else if (t == FOR_SOURCE) {
      r = ForSource(b, 0);
    }
    else if (t == FOR_START) {
      r = ForStart(b, 0);
    }
    else if (t == FOR_VALUE) {
      r = ForValue(b, 0);
    }
    else if (t == FOR_VARIABLES) {
      r = ForVariables(b, 0);
    }
    else if (t == FUNC_GLYPH) {
      r = FuncGlyph(b, 0);
    }
    else if (t == IDENTIFIER) {
      r = Identifier(b, 0);
    }
    else if (t == IF) {
      r = If(b, 0);
    }
    else if (t == IF_BLOCK) {
      r = IfBlock(b, 0);
    }
    else if (t == INDEX) {
      r = Index(b, 0);
    }
    else if (t == INDEX_VALUE) {
      r = IndexValue(b, 0);
    }
    else if (t == INVOCATION) {
      r = Invocation(b, 0);
    }
    else if (t == LINE) {
      r = Line(b, 0);
    }
    else if (t == LITERAL) {
      r = Literal(b, 0);
    }
    else if (t == LOOP) {
      r = Loop(b, 0);
    }
    else if (t == OBJ_ASSIGNABLE) {
      r = ObjAssignable(b, 0);
    }
    else if (t == OBJECT) {
      r = Object(b, 0);
    }
    else if (t == OPERATION) {
      r = Operation(b, 0);
    }
    else if (t == OPT_COMMA) {
      r = OptComma(b, 0);
    }
    else if (t == OPT_FUNC_EXIST) {
      r = OptFuncExist(b, 0);
    }
    else if (t == PARAM) {
      r = Param(b, 0);
    }
    else if (t == PARAM_LIST) {
      r = ParamList(b, 0);
    }
    else if (t == PARAM_VAR) {
      r = ParamVar(b, 0);
    }
    else if (t == PARENTHETICAL) {
      r = Parenthetical(b, 0);
    }
    else if (t == RANGE) {
      r = Range(b, 0);
    }
    else if (t == RANGE_DOTS) {
      r = RangeDots(b, 0);
    }
    else if (t == REGEX) {
      r = Regex(b, 0);
    }
    else if (t == RETURN) {
      r = Return(b, 0);
    }
    else if (t == SIMPLE_ARGS) {
      r = SimpleArgs(b, 0);
    }
    else if (t == SIMPLE_ASSIGNABLE) {
      r = SimpleAssignable(b, 0);
    }
    else if (t == SIMPLE_OBJECT_ASSIGNABLE) {
      r = SimpleObjectAssignable(b, 0);
    }
    else if (t == SLICE) {
      r = Slice(b, 0);
    }
    else if (t == SPLAT) {
      r = Splat(b, 0);
    }
    else if (t == STATEMENT) {
      r = Statement(b, 0);
    }
    else if (t == STRING) {
      r = String(b, 0);
    }
    else if (t == SWITCH) {
      r = Switch(b, 0);
    }
    else if (t == THIS) {
      r = This(b, 0);
    }
    else if (t == THIS_PROPERTY) {
      r = ThisProperty(b, 0);
    }
    else if (t == THROW) {
      r = Throw(b, 0);
    }
    else if (t == TRY) {
      r = Try(b, 0);
    }
    else if (t == VALUE) {
      r = Value(b, 0);
    }
    else if (t == WHEN) {
      r = When(b, 0);
    }
    else if (t == WHENS) {
      r = Whens(b, 0);
    }
    else if (t == WHILE) {
      r = While(b, 0);
    }
    else if (t == WHILE_SOURCE) {
      r = WhileSource(b, 0);
    }
    else {
      r = parse_root_(t, b, 0);
    }
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return Root(b, l + 1);
  }

  /* ********************************************************** */
  // '.' Identifier
  //            | '?.' Identifier
  //            | '::' Identifier
  //            | '?::' Identifier
  //            | '::'
  //            | Index
  public static boolean Accessor(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Accessor")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<accessor>");
    r = Accessor_0(b, l + 1);
    if (!r) r = Accessor_1(b, l + 1);
    if (!r) r = Accessor_2(b, l + 1);
    if (!r) r = Accessor_3(b, l + 1);
    if (!r) r = consumeToken(b, "::");
    if (!r) r = Index(b, l + 1);
    exit_section_(b, l, m, ACCESSOR, r, false, null);
    return r;
  }

  // '.' Identifier
  private static boolean Accessor_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Accessor_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ".");
    r = r && Identifier(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // '?.' Identifier
  private static boolean Accessor_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Accessor_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "?.");
    r = r && Identifier(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // '::' Identifier
  private static boolean Accessor_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Accessor_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "::");
    r = r && Identifier(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // '?::' Identifier
  private static boolean Accessor_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Accessor_3")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "?::");
    r = r && Identifier(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // NUMBER | String
  public static boolean AlphaNumeric(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AlphaNumeric")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<alpha numeric>");
    r = consumeToken(b, NUMBER);
    if (!r) r = String(b, l + 1);
    exit_section_(b, l, m, ALPHA_NUMERIC, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // Expression
  //            | Splat
  //            | '...'
  public static boolean Arg(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Arg")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<arg>");
    r = Expression(b, l + 1);
    if (!r) r = Splat(b, l + 1);
    if (!r) r = consumeToken(b, "...");
    exit_section_(b, l, m, ARG, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // Arg
  //            | ArgList ',' Arg
  //            | ArgList OptComma TERMINATOR Arg
  //            | INDENT ArgList OptComma OUTDENT
  //            | ArgList OptComma INDENT ArgList OptComma OUTDENT
  public static boolean ArgList(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArgList")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<arg list>");
    r = Arg(b, l + 1);
    if (!r) r = ArgList_1(b, l + 1);
    if (!r) r = ArgList_2(b, l + 1);
    if (!r) r = ArgList_3(b, l + 1);
    if (!r) r = ArgList_4(b, l + 1);
    exit_section_(b, l, m, ARG_LIST, r, false, null);
    return r;
  }

  // ArgList ',' Arg
  private static boolean ArgList_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArgList_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ArgList(b, l + 1);
    r = r && consumeToken(b, ",");
    r = r && Arg(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ArgList OptComma TERMINATOR Arg
  private static boolean ArgList_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArgList_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ArgList(b, l + 1);
    r = r && OptComma(b, l + 1);
    r = r && consumeToken(b, TERMINATOR);
    r = r && Arg(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // INDENT ArgList OptComma OUTDENT
  private static boolean ArgList_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArgList_3")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, INDENT);
    r = r && ArgList(b, l + 1);
    r = r && OptComma(b, l + 1);
    r = r && consumeToken(b, OUTDENT);
    exit_section_(b, m, null, r);
    return r;
  }

  // ArgList OptComma INDENT ArgList OptComma OUTDENT
  private static boolean ArgList_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArgList_4")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ArgList(b, l + 1);
    r = r && OptComma(b, l + 1);
    r = r && consumeToken(b, INDENT);
    r = r && ArgList(b, l + 1);
    r = r && OptComma(b, l + 1);
    r = r && consumeToken(b, OUTDENT);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // CALL_START CALL_END
  //            | CALL_START ArgList OptComma CALL_END
  public static boolean Arguments(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Arguments")) return false;
    if (!nextTokenIs(b, CALL_START)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = parseTokens(b, 0, CALL_START, CALL_END);
    if (!r) r = Arguments_1(b, l + 1);
    exit_section_(b, m, ARGUMENTS, r);
    return r;
  }

  // CALL_START ArgList OptComma CALL_END
  private static boolean Arguments_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Arguments_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, CALL_START);
    r = r && ArgList(b, l + 1);
    r = r && OptComma(b, l + 1);
    r = r && consumeToken(b, CALL_END);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // '[' ']'
  //            | '[' ArgList OptComma ']'
  public static boolean Array(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Array")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<array>");
    r = Array_0(b, l + 1);
    if (!r) r = Array_1(b, l + 1);
    exit_section_(b, l, m, ARRAY, r, false, null);
    return r;
  }

  // '[' ']'
  private static boolean Array_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Array_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "[");
    r = r && consumeToken(b, "]");
    exit_section_(b, m, null, r);
    return r;
  }

  // '[' ArgList OptComma ']'
  private static boolean Array_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Array_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "[");
    r = r && ArgList(b, l + 1);
    r = r && OptComma(b, l + 1);
    r = r && consumeToken(b, "]");
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // Assignable '=' Expression
  //            | Assignable '=' TERMINATOR Expression
  //            | Assignable '=' INDENT Expression OUTDENT
  public static boolean Assign(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Assign")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<assign>");
    r = Assign_0(b, l + 1);
    if (!r) r = Assign_1(b, l + 1);
    if (!r) r = Assign_2(b, l + 1);
    exit_section_(b, l, m, ASSIGN, r, false, null);
    return r;
  }

  // Assignable '=' Expression
  private static boolean Assign_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Assign_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Assignable(b, l + 1);
    r = r && consumeToken(b, "=");
    r = r && Expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // Assignable '=' TERMINATOR Expression
  private static boolean Assign_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Assign_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Assignable(b, l + 1);
    r = r && consumeToken(b, "=");
    r = r && consumeToken(b, TERMINATOR);
    r = r && Expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // Assignable '=' INDENT Expression OUTDENT
  private static boolean Assign_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Assign_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Assignable(b, l + 1);
    r = r && consumeToken(b, "=");
    r = r && consumeToken(b, INDENT);
    r = r && Expression(b, l + 1);
    r = r && consumeToken(b, OUTDENT);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ''
  //              | AssignObj
  //              | AssignList ',' AssignObj
  //              | AssignList OptComma TERMINATOR AssignObj
  //              | AssignList OptComma INDENT AssignList OptComma OUTDENT
  public static boolean AssignList(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AssignList")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<assign list>");
    r = consumeToken(b, "");
    if (!r) r = AssignObj(b, l + 1);
    if (!r) r = AssignList_2(b, l + 1);
    if (!r) r = AssignList_3(b, l + 1);
    if (!r) r = AssignList_4(b, l + 1);
    exit_section_(b, l, m, ASSIGN_LIST, r, false, null);
    return r;
  }

  // AssignList ',' AssignObj
  private static boolean AssignList_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AssignList_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = AssignList(b, l + 1);
    r = r && consumeToken(b, ",");
    r = r && AssignObj(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // AssignList OptComma TERMINATOR AssignObj
  private static boolean AssignList_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AssignList_3")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = AssignList(b, l + 1);
    r = r && OptComma(b, l + 1);
    r = r && consumeToken(b, TERMINATOR);
    r = r && AssignObj(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // AssignList OptComma INDENT AssignList OptComma OUTDENT
  private static boolean AssignList_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AssignList_4")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = AssignList(b, l + 1);
    r = r && OptComma(b, l + 1);
    r = r && consumeToken(b, INDENT);
    r = r && AssignList(b, l + 1);
    r = r && OptComma(b, l + 1);
    r = r && consumeToken(b, OUTDENT);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ObjAssignable
  //            | ObjAssignable ':' Expression
  //            | ObjAssignable ':' INDENT Expression OUTDENT
  //            | SimpleObjectAssignable '=' Expression
  //            | SimpleObjectAssignable '=' INDENT Expression OUTDENT
  //            | Comment
  public static boolean AssignObj(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AssignObj")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<assign obj>");
    r = ObjAssignable(b, l + 1);
    if (!r) r = AssignObj_1(b, l + 1);
    if (!r) r = AssignObj_2(b, l + 1);
    if (!r) r = AssignObj_3(b, l + 1);
    if (!r) r = AssignObj_4(b, l + 1);
    if (!r) r = Comment(b, l + 1);
    exit_section_(b, l, m, ASSIGN_OBJ, r, false, null);
    return r;
  }

  // ObjAssignable ':' Expression
  private static boolean AssignObj_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AssignObj_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ObjAssignable(b, l + 1);
    r = r && consumeToken(b, ":");
    r = r && Expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ObjAssignable ':' INDENT Expression OUTDENT
  private static boolean AssignObj_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AssignObj_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ObjAssignable(b, l + 1);
    r = r && consumeToken(b, ":");
    r = r && consumeToken(b, INDENT);
    r = r && Expression(b, l + 1);
    r = r && consumeToken(b, OUTDENT);
    exit_section_(b, m, null, r);
    return r;
  }

  // SimpleObjectAssignable '=' Expression
  private static boolean AssignObj_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AssignObj_3")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = SimpleObjectAssignable(b, l + 1);
    r = r && consumeToken(b, "=");
    r = r && Expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // SimpleObjectAssignable '=' INDENT Expression OUTDENT
  private static boolean AssignObj_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AssignObj_4")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = SimpleObjectAssignable(b, l + 1);
    r = r && consumeToken(b, "=");
    r = r && consumeToken(b, INDENT);
    r = r && Expression(b, l + 1);
    r = r && consumeToken(b, OUTDENT);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // SimpleAssignable
  //            | Array
  //            | Object
  public static boolean Assignable(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Assignable")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<assignable>");
    r = SimpleAssignable(b, l + 1);
    if (!r) r = Array(b, l + 1);
    if (!r) r = Object(b, l + 1);
    exit_section_(b, l, m, ASSIGNABLE, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // INDENT OUTDENT
  //            | INDENT Body OUTDENT
  public static boolean Block(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Block")) return false;
    if (!nextTokenIs(b, INDENT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = parseTokens(b, 0, INDENT, OUTDENT);
    if (!r) r = Block_1(b, l + 1);
    exit_section_(b, m, BLOCK, r);
    return r;
  }

  // INDENT Body OUTDENT
  private static boolean Block_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Block_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, INDENT);
    r = r && Body(b, l + 1);
    r = r && consumeToken(b, OUTDENT);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // Line
  //        | Body TERMINATOR Line
  //        | Body TERMINATOR
  public static boolean Body(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Body")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<body>");
    r = Line(b, l + 1);
    if (!r) r = Body_1(b, l + 1);
    if (!r) r = Body_2(b, l + 1);
    exit_section_(b, l, m, BODY, r, false, null);
    return r;
  }

  // Body TERMINATOR Line
  private static boolean Body_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Body_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Body(b, l + 1);
    r = r && consumeToken(b, TERMINATOR);
    r = r && Line(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // Body TERMINATOR
  private static boolean Body_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Body_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Body(b, l + 1);
    r = r && consumeToken(b, TERMINATOR);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // CATCH_T Identifier Block
  //            | CATCH_T Object Block
  //            | CATCH_T Block
  public static boolean Catch(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Catch")) return false;
    if (!nextTokenIs(b, CATCH_T)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Catch_0(b, l + 1);
    if (!r) r = Catch_1(b, l + 1);
    if (!r) r = Catch_2(b, l + 1);
    exit_section_(b, m, CATCH, r);
    return r;
  }

  // CATCH_T Identifier Block
  private static boolean Catch_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Catch_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, CATCH_T);
    r = r && Identifier(b, l + 1);
    r = r && Block(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // CATCH_T Object Block
  private static boolean Catch_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Catch_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, CATCH_T);
    r = r && Object(b, l + 1);
    r = r && Block(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // CATCH_T Block
  private static boolean Catch_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Catch_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, CATCH_T);
    r = r && Block(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }
